Removed the "first" and "last" buttons as they are confusing. Instead, the first and last pages (with their numbers visible) will always show, so the user know how many pages there are. Greyed out the prev/next buttons when the user is on the first/last page. More pages are shown at once now (up to 5 numbered pages at once before ... appear). Still some fixing to do, but it's getting there. Also attempted to document the code a bit.

--- a/portfolio/src/main/resources/static/styles/users.css
+++ b/portfolio/src/main/resources/static/styles/users.css
@@ -70,8 +70,9 @@ tr:nth-child(even) {
 }
 
 .pages {
-    width: 40px;
+    min-width: 40px; /* TODO check if this should be 30 px? */
     height: 40px;
+    padding: 0px 5px 0px 5px;
     background-color: white;
     display: inline-block;
     vertical-align: middle;
@@ -80,6 +81,11 @@ tr:nth-child(even) {
 
 .otherPages {
     color: #6495ED;
+}
+
+.disabled a {
+    pointer-events: none;
+    color: #666666;
 }
 
 .currentPage {
